--- a/references.bib
+++ b/references.bib
@@ -416,3 +416,42 @@ Citation Key: nilsson{\_}2024},
 	note = {Citation Key: mccarthy-2020},
 	langid = {en}
 }
+
+@misc{gallup-2009,
+	title = {Understanding How Gallup Uses the Cantril Scale},
+	author = {Gallup, Inc.},
+	year = {2009},
+	month = {08},
+	date = {2009-08-24},
+	url = {https://news.gallup.com/poll/122453/Understanding-Gallup-Uses-Cantril-Scale.aspx},
+	note = {Citation Key: gallup-2009},
+	langid = {en}
+}
+
+@article{nilsson2024,
+	title = {The Cantril Ladder elicits thoughts about power and wealth},
+	author = {Nilsson, {August Håkan} and Eichstaedt, Johannes C. and Lomas, Tim and Schwartz, Andrew and Kjell, Oscar},
+	year = {2024},
+	month = {02},
+	date = {2024-02-01},
+	journal = {Scientific Reports},
+	pages = {2642},
+	volume = {14},
+	number = {1},
+	doi = {10.1038/s41598-024-52939-y},
+	url = {https://www.nature.com/articles/s41598-024-52939-y},
+	note = {Publisher: Nature Publishing Group
+Citation Key: nilsson{\_}2024},
+	langid = {en}
+}
+
+@misc{gallup-2009,
+	title = {Understanding How Gallup Uses the Cantril Scale},
+	author = {Gallup, Inc.},
+	year = {2009},
+	month = {08},
+	date = {2009-08-24},
+	url = {https://news.gallup.com/poll/122453/Understanding-Gallup-Uses-Cantril-Scale.aspx},
+	note = {Citation Key: gallup-2009},
+	langid = {en}
+}
